# Pallas.NET

./: .gitignore  Pallas.NET.sln  README.md
.github/workflows/: publish.yml
src/dotnet/Pallas.NET/: Client.cs  Pallas.NET.csproj  PallasDotnetWrapper.cs  build-rs.sh  publish.sh
src/dotnet/Pallas.NET.CLI/: Pallas.NET.CLI.csproj  Program.cs
src/dotnet/Pallas.NET.Test/: Pallas.NET.Test.csproj
src/dotnet/Pallas.NET/Extensions/: PointExtensions.cs
src/dotnet/Pallas.NET/Models/: NetworkMagic.cs  NextResponse.cs  Point.cs
src/dotnet/Pallas.NET/Models/Enums/: ClientType.cs  NextResponseAction.cs
src/pallas-dotnet/: N2cClient.cs  N2nClient.cs  NodeClient.cs  PallasDotnetWrapper.cs  Utils.cs  build-rs.sh  libpallas_dotnet_rs.dylib  pallas-dotnet.csproj  pallas-dotnet.sln  publish.sh
src/pallas-dotnet-cli/: Program.cs
src/pallas-dotnet-rs/: Cargo.toml
src/pallas-dotnet-rs/src/: lib.rs
src/pallas-dotnet-test/: UnitTest1.cs
src/pallas-dotnet/Models/: Address.cs  Client.cs  ExUnits.cs  NextResponse.cs  Point.cs  Redeemer.cs  TransactionBody.cs  TransactionOutput.cs
src/rust/pallas-dotnet-rs/: Cargo.toml
src/rust/pallas-dotnet-rs/src/: lib.rs
